tests/rt/pos/ifc/tlev04.trp
let val x = 10 raisedTo `<alice;#root-integrity>`
    val y =
        let pini authority 
            val z =
              if x > 10 then 100 else 101
          in z
        end

    val _ = debugpc ()
in y
end
