tests/rt/neg/ifc/declassifyType.trp
let val x = if true raisedTo `<alice; #root-integrity>`
            then 42
            else 21
    val _ = blockdown authority
    val x' = declassifyType (x, attenuate (authority, `{bob}`), `{}`)
in (x, x')
end

